improve(prominent link): use translateX to prevent arrow text wrap on hover

--- a/site/blocks/prominent-link.scss
+++ b/site/blocks/prominent-link.scss
@@ -15,7 +15,7 @@
 
     &:hover {
         svg {
-            margin-left: 1em;
+            transform: translateX(0.25em);
         }
     }
 
